--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header5-1" data-rv-view="34" style="background-image: url(assets/images/shutterstock-567890248-2000x884.jpg);">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-after-navbar" id="header5-1" data-rv-view="34" style="background-image: url(assets/images/shutterstock-567890248-2000x884.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0; background-color: rgb(0, 0, 0);"></div>
 
@@ -404,33 +404,28 @@
 
 
                     <div data-form-alert="true">
-                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Спасибо за отклик! Мы свяжемся с вами в скором времени, в рабочие часы.</div>
+                        <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Дякую за відгук! Ми незабаром зв'яжемося з вами, в робочий час.</div>
                     </div>
 
 
                     <form action="https://mobirise.com/" method="post" data-form-title="Не соромтесь звертатися до нас">
 
-                        <input type="hidden" value="oqylrpy6aUZbFiz/OOwLZWedNgpHfV9Qe96KG8yXzWrMy5f19XcLHczDSskNVCMuBtZKE8c7b9td7DI/7LP2Kz+61d+2eegC+RBnBdVAWyOvqjRiJYIBCsRAA2zm0Tka" data-form-email="true">
+                        <input type="hidden" value="NU+crKf2EF5HRVw0HI4jHC7pC8tIO6NvZ9BGjVzkfRgR2Jn7HjYeLNf/lS4uaDX9pj9iEbLItT/haUWdmtYlBL5UH8KvxSccqjPdMf4XpgbhIQzqOytgyFi0lLk5c22L" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-md-6">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-f-name">Name<span class="form-asterisk">*</span></label>
+                                    <label class="form-control-label" for="form1-f-name">Ім'я</label>
                                     <input type="text" class="form-control" name="name" required="" data-form-field="Name" id="form1-f-name">
                                 </div>
                             </div>
 
-                            <div class="col-xs-12 col-md-4">
-                                <div class="form-group">
-                                    <label class="form-control-label" for="form1-f-email">Email<span class="form-asterisk">*</span></label>
-                                    <input type="email" class="form-control" name="email" required="" data-form-field="Email" id="form1-f-email">
-                                </div>
-                            </div>
+                            
 
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-md-6">
                                 <div class="form-group">
-                                    <label class="form-control-label" for="form1-f-phone">Phone</label>
+                                    <label class="form-control-label" for="form1-f-phone">Телефон</label>
                                     <input type="tel" class="form-control" name="phone" data-form-field="Phone" id="form1-f-phone">
                                 </div>
                             </div>
@@ -438,11 +433,11 @@
                         </div>
 
                         <div class="form-group">
-                            <label class="form-control-label" for="form1-f-message">Message</label>
+                            <label class="form-control-label" for="form1-f-message">Повідомлення</label>
                             <textarea class="form-control" name="message" rows="7" data-form-field="Message" id="form1-f-message"></textarea>
                         </div>
 
-                        <div><button type="submit" class="btn btn-primary">Відправити повідомлення</button></div>
+                        <div><button type="submit" class="btn btn-success">Відправити повідомлення</button></div>
 
                     </form>
                 </div>
@@ -470,11 +465,11 @@
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-phone mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">+3 8067 502 87 27&nbsp;<br>+38(063)036-59-33<br></span>
+                            <span class="list-group-text">+38(067) 502 87 27&nbsp;<br>+38(063)036-59-33<br></span>
                         </li>
                         <li class="list-group-item">
                             <span class="list-group-icon"><span class="etl-icon icon-map-pin mbr-iconfont-company-contacts3"></span></span>
-                            <span class="list-group-text">м. Київ, вул. Юрківська 2-6/32 офіс 2 ( ст.метро тараса Шевченка )</span>
+                            <span class="list-group-text">м. Київ,<br> вул. Юрківська 2-6/32<br> офіс 2 ( ст.метро тараса Шевченка )</span>
                         </li>
                         <li class="list-group-item active">
                             <span class="list-group-icon"><span class="etl-icon icon-envelope mbr-iconfont-company-contacts3"></span></span>
@@ -504,26 +499,26 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="X9G4ct7PVydPWlmdQJNoIbxRvNx4WRGwZRPTtg5eTEbDCMsCJE4xgw6eEWyD5abpLV0EhFHmL6qeKn54UhSadkUwF/F/NbMCmLXHe/zjuQXD09jCC97d2aqEXglpArno" data-form-email="true">
+                    <input type="hidden" value="TlKssYOHggeRxfjjBmJxWbBM/aGvaTww2JuiRmWc5cxo+lrW/GVpzanxScDojyxCLNHs5lI92MKL4EHPhhD8/0jIQ4kVFF/5LCzVydT38EW469WxDxI+M9wv8HKP2xVn" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts3-p-name">
                     </div>
 
-                    <div class="form-group">
-                        <label class="form-control-label" for="contacts3-p-email">Email<span class="form-asterisk">*</span></label>
-                        <input type="email" class="form-control input-sm input-inverse" name="email" required="" data-form-field="Email" id="contacts3-p-email">
-                    </div>
-
                     
+
+                    <div class="form-group">
+                        <label class="form-control-label" for="contacts3-p-phone">Phone</label>
+                        <input type="tel" class="form-control input-sm input-inverse" name="phone" data-form-field="Phone" id="contacts3-p-phone">
+                    </div>
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-p-message">Message</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="5" id="contacts3-p-message"></textarea>
                     </div>
 
-                    <div><button type="submit" class="btn btn-sm btn-black">Contact us</button></div>
+                    <div><button type="submit" class="btn btn-sm btn-success">Contact us</button></div>
 
                 </form>
 
